Polishing pass (grammar fixes, rewordings for flow)

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -16,11 +16,11 @@ The successfully [voted in](https://voting.decred.org/) rule change [DCP0004](ht
 
 ## Development
 
-[dcrd](https://github.com/decred/dcrd): Refactoring continues, with cleanup of unused functions and conditions, improvements to mining code and a revamp of `chaincfg` module. Careful code upgrades without breaking things are possible due to previous work on versioned modules, which are now available and in full use.
+[dcrd](https://github.com/decred/dcrd): Refactoring continues, with cleanup of unused functions and conditions, improvements to mining code and a revamp of the `chaincfg` module. Careful code upgrades without breaking things are now possible due to previous work on versioned modules, which are now available and in full use.
 
-[dcrwallet](https://github.com/decred/dcrwallet): Code cleanup and improvements to ticket purchase code. Work started to add [optional authentication](https://github.com/decred/dcrwallet/pull/1437) for gRPC API, which allows to omit private passphrase in API calls that require an unlocked wallet. This will mitigate issues that arise when unlocked wallets are isolated via physical and networked segmentation.
+[dcrwallet](https://github.com/decred/dcrwallet): Code cleanup and improvements to ticket purchase code. Work started to add [optional authentication](https://github.com/decred/dcrwallet/pull/1437) for gRPC API, which allows users to omit the private passphrase in API calls that require an unlocked wallet. This will mitigate issues that arise when unlocked wallets are isolated via physical and networked segmentation.
 
-[Decrediton](https://github.com/decred/decrediton): Work on making Decrediton's design more responsive (so that it is more usable on smaller screens) continued, with responsive designs completed for almost all of the views in this [master issue](https://github.com/decred/decrediton/issues/1820). The new responsive design was [implemented](https://github.com/decred/decrediton/pull/2094) in Create New Wallet view. A [pull request](https://github.com/decred/decrediton/pull/2107) to add an embedded LN wallet UI to Decrediton was opened, this initial version will allow Decrediton users to perform actions like open/close channels, add/withdraw funds, create invoices and send payments.
+[Decrediton](https://github.com/decred/decrediton): Work on making Decrediton's design more responsive (so that it is more usable on smaller screens) continued, with responsive designs completed for almost all of the views in this [master issue](https://github.com/decred/decrediton/issues/1820). The new responsive design was [implemented](https://github.com/decred/decrediton/pull/2094) in Create New Wallet view. A [pull request](https://github.com/decred/decrediton/pull/2107) to add an embedded LN wallet UI to Decrediton was opened; this initial version will allow Decrediton users to perform actions like open/close channel, add/withdraw funds, create invoices and send payments.
 
 [Politeia](https://github.com/decred/politeia): An upgrade was [deployed](https://twitter.com/marco_peereboom/status/1120398754216062978) on the live proposals site which brings significant performance improvements, adds a diff viewer to the proposal version history viewer drop-down, and changes the default ordering of comments to show top scoring comments first. The Contractor Management System is ready for use and will be used by contractors to submit their invoices for April.
 
@@ -34,7 +34,7 @@ Work is underway to prepare LN for mainnet, and Lightning will be technically po
 
 [dcrios](https://github.com/raedahgroup/dcrios): dcrios beta saw continued testing by community members and refinements to the UI. Only a few outstanding bugs remain, and developers continue working through the formal process of getting the app approved by the Apple Store.
 
-[dcrdata](https://github.com/decred/dcrdata): v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [live tracking](https://explorer.dcrdata.org/agendas) of on-chain votes for consensus rules changes, along with a number of performance and development improvements listed in the [release notes](https://github.com/decred/dcrdata/releases/tag/release-v4.1.0). Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added and iterated on the alpha site.
+[dcrdata](https://github.com/decred/dcrdata): v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [live tracking](https://explorer.dcrdata.org/agendas) of on-chain votes for consensus rules changes, along with a number of performance and development improvements listed in the [release notes](https://github.com/decred/dcrdata/releases/tag/release-v4.1.0). Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added on the alpha site and are being iterated upon.
 
 [docs](https://github.com/decred/dcrdocs): New pages: [Premine](https://docs.decred.org/advanced/premine/) describes Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes, [Hardware Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia's role in decision-making.
 
@@ -76,7 +76,7 @@ Below is proposal status as of May 7.
 
 * [A Journey to the Future of Work- Telling the DCR story through Politeia](https://proposals.decred.org/proposals/b9f342a0f917abb7a2ab25d5ed0aca63c06fe6dcc9d09565a9cde3b6fe7e6737) by @jer979 requests 40 DCR to write an article about the experience of submitting a proposal and going through the review and voting stages - with another 60 DCR to be paid if the article is featured in a "Tier 1" outlet.
 
-Voting concluded for further 3 proposals:
+Voting concluded for 3 further proposals:
 
 * The proposal to fund [Trust Wallet integration](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) (estimated cost of $3,300 plus $100/month ongoing) was approved with 67% Yes votes.
 * The proposal to start an RFP-type process for [ATM integration](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) was narrowly rejected with 52.5% Yes votes - the first proposal to be rejected with > 50% Yes votes. In a [discussion](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15542882616188dHEHP:decred.org) in the #proposals channel there seemed to be consensus that it would be fair to try again with a different version of this proposal, given the small margin in voting outcome.
@@ -84,7 +84,7 @@ Voting concluded for further 3 proposals:
 
 For a more detailed overview of Politeia and related action check out Politeia Digest [issue 14](https://medium.com/politeia-digest/issue-14-apr-1-apr-16-2019-1ad873ccafb).
 
-dcrdata's alpha version now offers [charts](https://alpha.dcrdata.org/proposals) showing the votes for a proposal over time. This makes Politeia data stored in the Git [repository](https://github.com/decred-proposals/mainnet) much more accessible.
+dcrdata's alpha version now offers [charts](https://alpha.dcrdata.org/proposals) that show votes over time, including real-time updates for votes in progress. This makes Politeia data stored in the Git [repository](https://github.com/decred-proposals/mainnet) much more accessible.
 
 ## Network
 
@@ -108,7 +108,7 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 April was a very busy month coordinating outreach, planning meetups and events, and getting setup on various platforms to begin executing the marketing plan. @anshawblack took admin reign of Decred DCR in Telegram, and has been facilitating excellent discussions by sharing quality Decred content. Here's a brief update on progress of the [marketing plan](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) approved on Politeia.
 
-Decred Assembly: @Dustorf & @jy-p did a practice session, then came back two weeks later to tape the first episode of the DA revamp. It was decided rather than record a single show, record segments separately in order to share a greater number of more digestible videos. For April, we filed a Deep Dive with @jy-p on the DEX, a Decred Distributed edition with @elian talking about Mexico and Latin America, and Decred Debunks segment with @richardred shooting down Boaty McBoatface and the idea that stakeholders won't make good decisions. Some administration work remains in order to post these videos on a weekly basis, which we hope to accomplish by the time this is published. The May edition has already been scheduled.
+Decred Assembly: @Dustorf & @jy-p did a practice session, then came back two weeks later to tape the first episode of the DA revamp. It was decided that rather than record a single show, segments would be recorded separately in order to generate a greater number of more digestible videos. For April, we filed a Deep Dive with @jy-p on the DEX, a Decred Distributed edition with @elian talking about Mexico and Latin America, and a Decred Debunks segment with @richardred shooting down Boaty McBoatface and the idea that stakeholders won't make good decisions. Some administration work remains in order to post these videos on a weekly basis, which we hope to accomplish by the time this is published. The May edition has already been scheduled.
 
 Decred Newsletter: We have decided to use an open-source service, [phpList](https://www.phplist.org/), which has caused some delay. The construct has been set and tests have been sent successfully. Currently, the design team is building out a template to make it look pretty, and they are working to incorporate a signup link into decred.org. Once that is done, we will share that to get people signed up and we expect to send the first emails in May.
 
@@ -224,15 +224,15 @@ Bitcoin broke the USD 5,000 barrier on Apr 3 and most other crypto assets reacte
 
 ## Relevant External
 
-@richardred has collected and [shared](https://github.com/RichardRed0x/crypto-governance-research/tree/master/governance-proposals) comprehensive proposal voting datasets for Decred, Dash and Aragon, and [tweeted](https://twitter.com/RichardRed0x/status/1114552602237313024) some basic statistics like average voter participation for each project. At the time of writing (Apr 6), based on proposals that had finished voting, Decred had an average ticket participation of 76% for on chain votes and 31% for Politeia proposals; Dash had an average masternode participation of 19% in its Treasury proposals; Aragon had an average ANT token participation of 4.5% voting on Aragon Governance Proposals (this is not directly comparable to Decred/Dash where only tickets/masternodes can vote).
+@richardred has collected and [shared](https://github.com/RichardRed0x/crypto-governance-research/tree/master/governance-proposals) comprehensive proposal voting datasets for Decred, Dash and Aragon, and [tweeted](https://twitter.com/RichardRed0x/status/1114552602237313024) some basic statistics like average voter participation for each project. At the time of writing (Apr 6), based on proposals that had finished voting, Decred had an average ticket participation of 76% for on-chain votes and 31% for Politeia proposals; Dash had an average masternode participation of 19% in its Treasury proposals; Aragon had an average ANT token participation of 4.5% voting on Aragon Governance Proposals (this is not directly comparable to Decred/Dash where only tickets/masternodes can vote).
 
-The second round of Aragon AGP voting concluded its 2 day voting window on Apr 27. 9 proposals were voted on, with a mean participation rate of 3.8% of circulating ANT tokens. 6 proposals were accepted, 3 rejected.
+The second round of Aragon AGP voting concluded its 2 day voting window on Apr 27. Nine proposals were voted on, with a mean participation rate of 3.8% of circulating ANT tokens. 6 proposals were accepted, 3 rejected.
 
-3 of the Aragon's proposals concerned Polkadot in some way, after the leaders of Aragon One had stated that they are considering developing a second Aragon application on Polkadot. A proposal to buy some DOTs with the Aragon Association's ETH (with a view to maintaining a parachain and participating in Polkadot governance) was firmly rejected by ANT voters, with just 7% Yes votes. A proposal to affirm Aragon's commitment to Ethereum and stop Aragon One working on Polkadot related development was more narrowly defeated (with 31% Yes votes). This proposal would have caused significant friction between Aragon One and the ANT holder community had it passed, with Luis Cuende stating in an [interview](https://www.coindesk.com/aragon-vote-aims-to-restrict-ethereum-app-from-funding-polkadot-blockchain) that he would have submitted a counter-proposal in the following round of AGP voting. In the third Polkadot-related proposal, 72% of voting ANT approved the Aragon Association to participate in a "lockdrop" for tokens on the forthcoming Edgeware parachain - leaving considerable discretion for the AA to decide how many tokens to lock and how long to lock them for. Another interesting proposal saw the Aragon Association asking for authority to arrange security audits directly (rather than going through the AGP process to vote on these decisions), this was approved with 93% Yes votes, while a proposal from the group that currently performs security audits for continued funding was rejected with 35% Yes votes.
+Three of the Aragon's proposals concerned Polkadot in some way, after the leaders of Aragon One had stated that they are considering developing a second Aragon application on Polkadot. A proposal to buy some DOTs with the Aragon Association's ETH (with a view to maintaining a parachain and participating in Polkadot governance) was firmly rejected by ANT voters, with just 7% Yes votes. A proposal to affirm Aragon's commitment to Ethereum and stop Aragon One working on Polkadot related development was more narrowly defeated (with 31% Yes votes). This proposal would have caused significant friction between Aragon One and the ANT holder community had it passed, with Luis Cuende stating in an [interview](https://www.coindesk.com/aragon-vote-aims-to-restrict-ethereum-app-from-funding-polkadot-blockchain) that he would have submitted a counter-proposal in the following round of AGP voting. In the third Polkadot-related proposal, 72% of voting ANT approved the Aragon Association to participate in a "lockdrop" for tokens on the forthcoming Edgeware parachain, leaving considerable discretion for the AA to decide how many tokens to lock and how long to lock them for. Another interesting proposal saw the Aragon Association asking for authority to arrange security audits directly (rather than going through the AGP process to vote on these decisions). This was approved with 93% Yes votes, while a proposal from the group that currently performs security audits for continued funding was rejected with 35% Yes votes.
 
 It has been [noted](https://www.evanvanness.com/post/184616403861/aragon-vote-shows-the-perils-of-onchain-governance) that the outcome of several AGP votes was altered by one whale (7th largest ANT wallet, holding 2% of tokens) voting very close to the end of the voting period. 
 
-The Dash sporking upgrade process [completed](https://blog.dash.org/product-update-april-5-2019-71344591a5e1) to enable Deterministic Masternode List (which is a requirement for chain locks that will deter PoW majority attacks) and Auto InstantSend. The activation of this spork caused Treasury proposal votes to be reset, and for most of the month it looked as though only a few proposals would reach the required level of votes to be funded. When superblock voting closed on Apr 29 voter participation rates were back to within their normal range and 15 proposals met the requirement. 660 DASH remained to be spent in the superblock, and is now lost to the Dash Treasury, but this level of underspend is not particularly uncommon. Among the [proposals](https://github.com/RichardRed0x/crypto-governance-research/blob/master/governance-proposals/dash-proposals.csv) were two from rival PR firms, Wachsman and Shift (until this point Dash Core Group had arranged such services directly at their discretion, and had been retaining the services of Wachsman). The Shift proposal, costing $10K per month as a retainer, passed with 536 Yes votes (90% Yes, but only 52 votes over the quorum requirement), while the Wachsman proposal was rejected with a score of -206 (more No votes than Yes votes).
+The Dash sporking upgrade process [completed](https://blog.dash.org/product-update-april-5-2019-71344591a5e1) to enable Deterministic Masternode List (which is a requirement for chain locks that will deter PoW majority attacks) and Auto InstantSend. The activation of this spork caused Treasury proposal votes to be reset, and for most of the month it looked as though only a few proposals would reach the required level of votes to be funded. When superblock voting closed on Apr 29 voter participation rates were back to within their normal range and 15 proposals met the requirement. 660 DASH remained to be spent in the superblock, and is now lost to the Dash Treasury, but this level of underspend is not particularly uncommon. Among the [proposals](https://github.com/RichardRed0x/crypto-governance-research/blob/master/governance-proposals/dash-proposals.csv) were two from rival PR firms, Wachsman and Shift; until this point Dash Core Group had arranged such services directly at their discretion, and had been retaining the services of Wachsman. The Shift proposal, costing $10K per month as a retainer, passed with 536 Yes votes (90% Yes, but only 52 votes over the quorum requirement), while the Wachsman proposal was rejected with a score of -206 (more No votes than Yes votes).
 
 The EOS constitution has been replaced with a new [user agreement](https://github.com/eosnewyork/eosuseragreement/blob/master/README.md), proposed on chain by [EOS New York](https://medium.com/eos-new-york/the-eos-user-agreement-has-been-proposed-on-chain-61bf3760b604) and [approved](https://eosauthority.com/approval/view?scope=eosnewyorkio&name=eosuseragree&lnc=en) by the 21 Block Producers. This change had been put to EOS holders in a [referendum](https://eosauthority.com/polls_details?proposal=eosuseragree_20190207&lnc=en). The referendum has a long duration (3 months) and is not due to finish until May 8, there is strong support for the proposal (98% Yes) but voter participation is very low (1.7%). EOS referendums had a notional quorum requirement of 15%, but in light of the fact that none of the polls are even close to reaching that level of participation, it seems like the BPs have decided to bypass the formal referendum process and move forward with some of the proposed changes. The EOS BPs also [approved](https://twitter.com/zeroxeos/status/1118833569118466048) the deployment of REX (Resource Exchange), but it [failed](https://www.reddit.com/r/eos/comments/bekd4f/rex_is_here_status_approved_by_15_bp/) execution on chain and will have to be re-proposed.
 
