Add title image

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -1,6 +1,6 @@
 # {DRAFT} Decred Journal – April 2019
 
-![{alt text}](../img/{file.jpg} "{hover text}")
+![abstract art](../img/journal-201904-384.jpg "Blue Dragon by @saender. Dragon resembles power/fear/terror/chaos. Blue dragon is calm and intelligent, but nevertheless powerful. It resembles a balance of power and wisdom.")
 
 April saw the launch of Lightning Network on Decred's testnet! This is a great time to [check it out](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e), do some testing, and start building on Decred's LN.
 
