--- a/journal/201905.md
+++ b/journal/201905.md
@@ -2,7 +2,7 @@
 
 ![{alt text}](../img/{file.jpg} "{hover text}")
 
-{introduction, major news of the month}
+{introduction, major news of the month ordered by impact}
 
 ## Development
 
@@ -22,7 +22,9 @@
 
 [dcrios](https://github.com/raedahgroup/dcrios): {}
 
-[dcrdata](https://github.com/decred/dcrdata): {}
+[dcrdata](https://github.com/decred/dcrdata):
+
+* convenient markets dashboard made possible by external data aggregator https://alpha.dcrdata.org/market
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
 
@@ -30,7 +32,13 @@
 
 [decred.org](https://github.com/decred/dcrweb): {}
 
-Dev activity stats for May: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
+[dcrpool](https://github.com/decred/dcrpool): New PoW mining pool software is available. {more detail, how is it better than what mining pools use today}
+
+Other:
+
+* dcrstakepool (VSP) redesign https://github.com/decred/dcrstakepool/pull/339
+
+Dev activity stats for May: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({})) {chart link is optional, drop if not ready}
 
 ## People
 
@@ -44,15 +52,17 @@ Welcome to new first time contributors with code merged to master: {list people 
 
 {high level recap of decision-making activity, most important events, defer to Politeia Digest for the rest}
 
-In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {} DCR and spent {} DCR. Using May's daily average DCR/USD rate of ${}, this is ${}K received and ${}K spent. As these payments were for work completed in April, it is also informative to consider them in the context of the April average daily rate of ${} - in which case the USD received/spent figures are ${}K/${}K. As of {date}, Treasury balance is {} DCR ({} million USD at ${}).
+In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {} DCR and spent {} DCR. Using May's daily average DCR/USD rate of ${}, this is ${}K received and ${}K spent. As these payments were for work completed in April, it is also informative to consider them in the context of the April average daily rate of ${n.nn} - in which case the USD received/spent figures are ${}K/${}K. As of {date}, Treasury balance is {} DCR ({} million USD at ${n.nn}).
 
 ## Network
 
 {cross-check dcred.eu, dcrstats.com and charts.dcr.farm to get the numbers}
 
-Hashrate: May's hashrate opened at ~{} Ph/s and closed ~{} Ph/s, bottoming at {} Ph/s and peaking at {} Ph/s throughout the month. Pool hashrate distribution: {} per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: May's hashrate opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool hashrate distribution as of {date}: {pool name} {n%}, {pool name} {n%} per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-Staking: 30-day average ticket price was {} DCR (+{}) per dcrstats.com. The price varied between {}-{} DCR. Locked amount was {}-{} million DCR, which corresponded to {}-{}% of the available supply.
+Staking: 30-day average ticket price was {n.n} DCR (+{n.n}) per dcrstats.com. The price varied between {n.n}-{n.n} DCR. Locked amount was {n.nn}-{n.nn} million DCR, which corresponded to {n.n}-{n.n}% of the available supply.
+
+{recap of ticket price action if it was interesting}
 
 Nodes: As of {date} there were {} public listening nodes and {} normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: {}.
 
@@ -78,7 +88,7 @@ Exchange integrations:
 
 New merchants:
 
-* {}
+* https://twitter.com/Trippki_/status/1125131845673410561
 
 {applications of Decred blockchain and related projects: Politeia, atomicswap}
 
@@ -111,6 +121,7 @@ https://www.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_
 Selected articles:
 
 * https://medium.com/@seth.benton/how-i-make-a-living-in-the-crypto-gig-economy-8674f3693858
+* {title} by {author} ([{domain}]({link})
 
 Translations:
 
@@ -122,7 +133,7 @@ Videos:
 
 Audio:
 
-* {}
+* https://twitter.com/TomCasano/status/1125456456638242816 {get direct link if possible}
 
 ## Community Discussions
 
@@ -154,7 +165,7 @@ Twitter: {interesting threads}
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
 
-In May DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate was ${}.
+In May DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate was ${n.nn}.
 
 ## Relevant External
 
