Added EOS drama

--- a/journal/201905.md
+++ b/journal/201905.md
@@ -133,6 +133,10 @@ Videos:
 
 Audio:
 
+http://www.vexpoint.com/decred-investment/
+
+https://podcasts.apple.com/us/podcast/decred-everything-you-ever-wanted-to-know-with-noah-pierau/id1458917295?i=1000437282056
+
 * https://twitter.com/TomCasano/status/1125456456638242816 {get direct link if possible}
 
 ## Community Discussions
@@ -172,6 +176,12 @@ In May DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate was
 {PoW, ASIC resistance, tech}
 
 {governance, funding, forks, chain splits, controversy}
+
+EOS burned its accumulated "Treasury" inflation, after an earlier attempt had failed to execute.
+
+<https://www.reddit.com/r/eos/comments/bm75ih/the_mainnet_34m_eos_accumulated_4_inflation_is/>
+
+<https://cryptoslate.com/eos-likely-to-drop-inflation-rate-from-5-to-1/>
 
 {DEX}
 
