Try h3 headings in Dev

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -16,29 +16,49 @@ The successfully [voted in](https://voting.decred.org/) rule change [DCP0004](ht
 
 ## Development
 
-[dcrd](https://github.com/decred/dcrd): Refactoring continues, with cleanup of unused functions and conditions, improvements to mining code and a revamp of the `chaincfg` module. Careful code upgrades without breaking things are now possible due to previous work on versioned modules, which are now available and in full use.
+### dcrd
 
-[dcrwallet](https://github.com/decred/dcrwallet): Code cleanup and improvements to ticket purchase code. Work started to add [optional authentication](https://github.com/decred/dcrwallet/pull/1437) for gRPC API, which allows users to omit the private passphrase in API calls that require an unlocked wallet. This will mitigate issues that arise when unlocked wallets are isolated via physical and networked segmentation.
+Refactoring continues, with cleanup of unused functions and conditions, improvements to mining code and a revamp of the `chaincfg` module. Careful code upgrades without breaking things are now possible due to previous work on versioned modules, which are now available and in full use.
 
-[Decrediton](https://github.com/decred/decrediton): Work on making Decrediton's design more responsive (so that it is more usable on smaller screens) continued, with responsive designs completed for almost all of the views in this [master issue](https://github.com/decred/decrediton/issues/1820). The new responsive design was [implemented](https://github.com/decred/decrediton/pull/2094) in Create New Wallet view. A [pull request](https://github.com/decred/decrediton/pull/2107) to add an embedded LN wallet UI to Decrediton was opened; this initial version will allow Decrediton users to perform actions like open/close channel, add/withdraw funds, create invoices and send payments.
+### dcrwallet
 
-[Politeia](https://github.com/decred/politeia): An upgrade was [deployed](https://twitter.com/marco_peereboom/status/1120398754216062978) on the live proposals site which brings significant performance improvements, adds a diff viewer to the proposal version history viewer drop-down, and changes the default ordering of comments to show top scoring comments first. The Contractor Management System is ready for use and will be used by contractors to submit their invoices for April.
+Code cleanup and improvements to ticket purchase code. Work started to add [optional authentication](https://github.com/decred/dcrwallet/pull/1437) for gRPC API, which allows users to omit the private passphrase in API calls that require an unlocked wallet. This will mitigate issues that arise when unlocked wallets are isolated via physical and networked segmentation.
 
-[dcrlnd](https://github.com/decred/dcrlnd): Decred's Lightning Network (LN) is live on testnet! After months of hard work and several changes across the whole software stack, Decred's official port of the original [lnd daemon](https://github.com/lightningnetwork/lnd), [dcrlnd](https://github.com/decred/dcrlnd), has been [released](https://matheusd.com/post/announcing-dcrlnd/) and is ready for testnet usage. All unit and integration tests from the upstream Lightning Network project are passing, and an initial [integration](https://github.com/decred/decrediton/pull/2107) with Decrediton is close to completion.
+### Decrediton
+
+Work on making Decrediton's design more responsive (so that it is more usable on smaller screens) continued, with responsive designs completed for almost all of the views in this [master issue](https://github.com/decred/decrediton/issues/1820). The new responsive design was [implemented](https://github.com/decred/decrediton/pull/2094) in Create New Wallet view. A [pull request](https://github.com/decred/decrediton/pull/2107) to add an embedded LN wallet UI to Decrediton was opened; this initial version will allow Decrediton users to perform actions like open/close channel, add/withdraw funds, create invoices and send payments.
+
+### Politeia
+
+An upgrade was [deployed](https://twitter.com/marco_peereboom/status/1120398754216062978) on the live proposals site which brings significant performance improvements, adds a diff viewer to the proposal version history viewer drop-down, and changes the default ordering of comments to show top scoring comments first. The Contractor Management System is ready for use and will be used by contractors to submit their invoices for April.
+
+### dcrlnd
+
+Decred's Lightning Network (LN) is live on testnet! After months of hard work and several changes across the whole software stack, Decred's official port of the original [lnd daemon](https://github.com/lightningnetwork/lnd), [dcrlnd](https://github.com/decred/dcrlnd), has been [released](https://matheusd.com/post/announcing-dcrlnd/) and is ready for testnet usage. All unit and integration tests from the upstream Lightning Network project are passing, and an initial [integration](https://github.com/decred/decrediton/pull/2107) with Decrediton is close to completion.
 
 A lnd faucet has been [styled](https://github.com/matheusd/lightning-faucet/pull/4) for Decred look and feel. Check out one of several testnet faucets [here](https://testnet-dcrln-01.davec.name/) for a peek.
 
 Work is underway to prepare LN for mainnet, and Lightning will be technically possible on mainnet after the `fixlnseqlock` agenda [activates](https://explorer.dcrdata.org/agendas) in block 342,784 around May 9. It will take time to build up the network and improve the user experience. Use of Decred's LN should for now be considered experimental and not involve large sums of DCR. Testnet is where the LN action will happen for some time. You can follow the growth of testnet LN with this [network graph](http://ln-map.jamieholdstock.com/).
 
-[dcrandroid](https://github.com/decred/dcrandroid): Minor bug fixes and language optimizations continue. Optional biometric authentication option is [in progress](https://github.com/decred/dcrandroid/pull/343) and will be released in the next version, adding an extra layer of security on top of entering the wallet passphrase.
+### dcrandroid
 
-[dcrios](https://github.com/raedahgroup/dcrios): dcrios beta saw continued testing by community members and refinements to the UI. Only a few outstanding bugs remain, and developers continue working through the formal process of getting the app approved by the Apple Store.
+Minor bug fixes and language optimizations continue. Optional biometric authentication option is [in progress](https://github.com/decred/dcrandroid/pull/343) and will be released in the next version, adding an extra layer of security on top of entering the wallet passphrase.
 
-[dcrdata](https://github.com/decred/dcrdata): v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [live tracking](https://explorer.dcrdata.org/agendas) of on-chain votes for consensus rules changes, along with a number of performance and development improvements listed in the [release notes](https://github.com/decred/dcrdata/releases/tag/release-v4.1.0). Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added on the alpha site and are being iterated upon.
+### dcrios
 
-[docs](https://github.com/decred/dcrdocs): New pages: [Premine](https://docs.decred.org/advanced/premine/) describes Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes, [Hardware Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia's role in decision-making.
+dcrios beta saw continued testing by community members and refinements to the UI. Only a few outstanding bugs remain, and developers continue working through the formal process of getting the app approved by the Apple Store.
 
-[dcrtimestamptweet](https://github.com/tiagoalvesdulce/dcrtimestamptweet): A new Twitter bot was started in late March. Mention [@dcrtimestampbot](https://twitter.com/dcrtimestampbot) in a comment and the bot will store the thread in IPFS, use dcrtime to anchor the data on the Decred blockchain, and message the user who invoked it.
+### dcrdata
+
+v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [live tracking](https://explorer.dcrdata.org/agendas) of on-chain votes for consensus rules changes, along with a number of performance and development improvements listed in the [release notes](https://github.com/decred/dcrdata/releases/tag/release-v4.1.0). Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added on the alpha site and are being iterated upon.
+
+### docs
+
+New pages: [Premine](https://docs.decred.org/advanced/premine/) describes Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes, [Hardware Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia's role in decision-making.
+
+### dcrtimestamptweet
+
+[dcrtimestamptweet](https://github.com/tiagoalvesdulce/dcrtimestamptweet) is a new Twitter bot was started in late March. Mention [@dcrtimestampbot](https://twitter.com/dcrtimestampbot) in a comment and the bot will store the thread in IPFS, use dcrtime to anchor the data on the Decred blockchain, and message the user who invoked it.
 
 Dev activity stats for April: 326 active PRs, 509 master commits, 96K added and 55K deleted lines spread across 10 repositories. Contributions came from 1-9 developers per repository.
 
